--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="../img/face.jpg">
+    <link rel="icon" type="image/svg+xml" href="../img/deokwoojpg.jpg">
 
     <!-- Help auto scale for desktop & mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,7 +32,7 @@
     <header>
         <div class="logo">
             <!-- alt text can be blank since the logo is purely decorative and putting something like logo isn't actually helpful -->
-            <img src="img/mycout.png" alt="">
+            <img src="img/mycout2.png" alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -58,8 +58,8 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Deokwoo Seo</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Game Programmer/Designer/Developer/Player/TODO/TODO</p>
-        <img src="img/face.jpg" alt="a picture of Deokwoo Seo smiling" class="intro__img" />
+        <p class="section__subtitle section__subtitle--intro">Student & Game Programmer</p>
+        <img src="img/deokwoojpg.jpg" alt="a picture of Deokwoo Seo smiling" class="intro__img" />
     </section>
 
     <!-- My Services -->
@@ -101,7 +101,7 @@
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
         <p class="section__subtitle section__subtitle--about">
-            Student Game Programmer Deokwoo Seo
+            Student Game Programmer
         </p>
 
         <div class="about-me__body">
