--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
     <section class="intro" id="#home">
         <!-- TODO put in a mouse based interactive shader visualization page-->
-        <!-- <div class="intro-bg">
+        <div class="intro-bg">
             <iframe src="webgl/for_fun.html"></iframe>
-        </div> -->
+        </div>
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Deokwoo Seo</strong>
         </h1>
