--- a/webgl/for_fun.html
+++ b/webgl/for_fun.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Interactive Shader Visualization</title>
   <style>
-    html,
-    body {
-      margin: 0;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    canvas {
-      display: block;
+    html, 
+    body { margin: 0; 
+          height: 100%; 
+          overflow: hidden; 
+        }
+    canvas { 
+      display: block; 
     }
   </style>
 </head>
-
 <body>
   <canvas id="glCanvas"></canvas>
   <script>
@@ -25,8 +21,8 @@
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
     const gl = canvas.getContext('webgl');
-    if (!gl) {
-      alert("Your browser does not support WebGL.");
+    if (!gl) { 
+      alert("Your browser does not support WebGL."); 
     }
 
     const vertexShaderSource = `
@@ -43,7 +39,7 @@
       uniform float u_time;
       void main() {
         vec2 st = gl_FragCoord.xy / u_resolution;
-        float d = distance(st, u_mouse / u_resolution);
+        float d = distance(st, (u_mouse / u_resolution) * 0.5);
         vec3 color = vec3(0.5 + 0.5 * cos(u_time + st.xyx + vec3(0,2,4))) - d;
         gl_FragColor = vec4(color, 1.0);
       }
@@ -75,11 +71,11 @@
 
     const vertices = new Float32Array([
       -1, -1,
-      1, -1,
-      -1, 1,
-      -1, 1,
-      1, -1,
-      1, 1,
+       1, -1,
+      -1,  1,
+      -1,  1,
+       1, -1,
+       1,  1,
     ]);
     const buffer = gl.createBuffer();
     gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
