--- a/index.html
+++ b/index.html
@@ -64,32 +64,29 @@
 
     <!-- My Services -->
     <section class="my-services" id="skills">
-        <h2 class="section__title section__title--services">SKLILZ</h2>
+        <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>SKILL TODO</h3>
-                <p> TODO
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                <h3>C++ Programmer</h3>
+                <p> C++ is my language of choice as a computer science student. I’ve built several projects using modern C++ from
+                game prototypes to opengl implementations. I love tackling the challenge of writing code that is both efficient and
+                easy to understand, and I continuously refine my skills by experimenting with new libraries and techniques.
                 </p>
             </div>
 
             <div class="service">
-                <h3>SKILL TODO</h3>
-                <p> TODO
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                <h3>Collaborative Project Developer</h3>
+                <p> I actively work on team projects that require planning, coding, and refining software solutions. I take pride in writing
+                clean, efficient code that integrates well within a team setting, and I enjoy the collaborative process of overcoming
+                complex challenges.
                 </p>
             </div>
 
             <div class="service">
-                <h3>SKILL TODO</h3>
-                <p> TODO
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                <h3>Build Automation & Tools</h3>
+                <p> I leverage tools like CMake and GitHub to automate builds and streamline development workflows. This focus on
+                automation allows me to ensure that my code is reliably built and deployed across multiple platforms, improving overall
+                productivity.
                 </p>
             </div>
         </div>
@@ -101,22 +98,21 @@
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
         <p class="section__subtitle section__subtitle--about">
-            Student Game Programmer
+            C++ Game Programmer Student based out of Daegu, Korea
         </p>
 
         <div class="about-me__body">
             <p>
-                TODO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.
-            </p>
+                I’m a third-year student passionate about learning and applying C++ for game programming. I focus on building a strong
+                foundation in computer graphics, and I enjoy exploring how modern C++ techniques can create efficient, engaging
+                experiences.            </p>
             <p>
-                TODO Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.
+                While I’m still early in my journey compared to seasoned professionals, I am dedicated to continuous learning and
+                improvement. I value clear, maintainable code and embrace challenges as opportunities to grow. I’m always open to
+                discussing ideas and collaborating with others who share my interests.
             </p>
         </div>
-        <img src="img/tall.jpg" alt="picture of Deokwoo Seo" class="about-me__img" />
+        <img src="img/deokwoojpg.jpg" alt="picture of Deokwoo Seo" class="about-me__img" />
     </section>
 
     <!-- My Portfolio -->
