--- a/webgl/for_fun.html
+++ b/webgl/for_fun.html
@@ -21,9 +21,9 @@
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
     const gl = canvas.getContext('webgl');
-    if (!gl) { 
-      alert("Your browser does not support WebGL."); 
-    }
+    // if (!gl) { 
+    //   alert("Your browser does not support WebGL."); 
+    // }
 
     const vertexShaderSource = `
       attribute vec2 a_position;
