--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="mailto:my.email@digipen.edu" class="footer__link">my.email@digipen.edu</a>
+        <a href="mailto:deokwoo.seo@digipen.edu" class="footer__link">deokwoo.seo@digipen.edu</a>
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://linkedin.com/in/mylinkedinid">
@@ -224,7 +224,7 @@
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/mygithubid">
+                <a class="social-list__link" href="https://github.com/deokwooseo">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
