--- a/portfolio/06_value.html
+++ b/portfolio/06_value.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="../img/face.jpg">
+    <link rel="icon" type="image/svg+xml" href="../img/deokwoojpg.jpg">
 
     <!-- Help auto scale for desktop & mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
