--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="service">
-                <h3>Collaborative Project Developer</h3>
+                <h3>Project Developer</h3>
                 <p> I actively work on team projects that require planning, coding, and refining software solutions. I take pride in writing
                 clean, efficient code that integrates well within a team setting, and I enjoy the collaborative process of overcoming
                 complex challenges.
