--- a/index.html
+++ b/index.html
@@ -232,14 +232,19 @@
     <footer class="footer">
         <a href="mailto:deokwoo.seo@digipen.edu" class="footer__link">deokwoo.seo@digipen.edu</a>
         <ul class="social-list">
-            <li class="social-list__item">
+            <!-- <li class="social-list__item">
                 <a class="social-list__link" href="https://linkedin.com/in/mylinkedinid">
                     <i class="fab fa-linkedin"></i>
                 </a>
-            </li>
+            </li> -->
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/deokwooseo">
                     <i class="fab fa-github"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://discordapp.com/users/644060366116093952">
+                    <i class="fab fa-discord"></i>
                 </a>
             </li>
             <!-- Want to list more? search : https://fontawesome.com/v5/search?ic=brands -->
