--- a/webgl/for_fun.html
+++ b/webgl/for_fun.html
@@ -1,141 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Interactive Shader Visualization</title>
   <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: #111;
-      overflow: hidden;
-    }
-
-    canvas {
-      display: block;
+    html, 
+    body { margin: 0; 
+          height: 100%; 
+          overflow: hidden; 
+        }
+    canvas { 
+      display: block; 
     }
   </style>
 </head>
-
 <body>
-  <canvas id="glcanvas"></canvas>
+  <canvas id="glCanvas"></canvas>
   <script>
-    const canvas = document.getElementById('glcanvas');
-    function resizeCanvas() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    }
-    resizeCanvas();
-    window.addEventListener('resize', resizeCanvas);
-
+    const canvas = document.getElementById('glCanvas');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
     const gl = canvas.getContext('webgl');
-    if (!gl) {
-      alert("WebGL not supported in your browser.");
-    }
+    // if (!gl) { 
+    //   alert("Your browser does not support WebGL."); 
+    // }
 
-    const vsSource = `
-      attribute vec4 aVertexPosition;
-      void main(void) {
-        gl_Position = aVertexPosition;
+    const vertexShaderSource = `
+      attribute vec2 a_position;
+      void main() {
+        gl_Position = vec4(a_position, 0.0, 1.0);
       }
     `;
 
-    const fsSource = `
+    const fragmentShaderSource = `
       precision mediump float;
-      uniform vec2 uResolution;
-      uniform vec2 uMouse;
-      uniform float uTime;
-      void main(void) {
-        // Normalize pixel coordinates (from 0 to 1)
-        vec2 st = gl_FragCoord.xy / uResolution;
-        // Calculate distance from mouse (normalized)
-        float d = distance(st, uMouse / uResolution);
-        // Use sine and cosine for a time-varying color effect
-        vec3 color = vec3(0.5 + 0.5 * sin(uTime + d * 10.0),
-                          0.5 + 0.5 * cos(uTime + d * 10.0),
-                          0.5 - 0.5 * sin(uTime));
+      uniform vec2 u_resolution;
+      uniform vec2 u_mouse;
+      uniform float u_time;
+      void main() {
+        vec2 st = gl_FragCoord.xy / u_resolution;
+        float d = distance(st, (u_mouse / u_resolution) * 0.5);
+        vec3 color = vec3(0.5 + 0.5 * cos(u_time + st.xyx + vec3(0,2,4))) - d;
         gl_FragColor = vec4(color, 1.0);
       }
     `;
 
-    function loadShader(gl, type, source) {
+    function compileShader(type, source) {
       const shader = gl.createShader(type);
       gl.shaderSource(shader, source);
       gl.compileShader(shader);
       if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-        alert('An error occurred compiling the shaders: ' + gl.getShaderInfoLog(shader));
+        console.error(gl.getShaderInfoLog(shader));
         gl.deleteShader(shader);
         return null;
       }
       return shader;
     }
 
-    function initShaderProgram(gl, vsSource, fsSource) {
-      const vertexShader = loadShader(gl, gl.VERTEX_SHADER, vsSource);
-      const fragmentShader = loadShader(gl, gl.FRAGMENT_SHADER, fsSource);
-      const shaderProgram = gl.createProgram();
-      gl.attachShader(shaderProgram, vertexShader);
-      gl.attachShader(shaderProgram, fragmentShader);
-      gl.linkProgram(shaderProgram);
-      if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
-        alert('Unable to initialize the shader program: ' + gl.getProgramInfoLog(shaderProgram));
-        return null;
-      }
-      return shaderProgram;
+    const vertexShader = compileShader(gl.VERTEX_SHADER, vertexShaderSource);
+    const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fragmentShaderSource);
+
+    const program = gl.createProgram();
+    gl.attachShader(program, vertexShader);
+    gl.attachShader(program, fragmentShader);
+    gl.linkProgram(program);
+    if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+      console.error(gl.getProgramInfoLog(program));
     }
+    gl.useProgram(program);
 
-    const shaderProgram = initShaderProgram(gl, vsSource, fsSource);
-    const programInfo = {
-      program: shaderProgram,
-      attribLocations: {
-        vertexPosition: gl.getAttribLocation(shaderProgram, 'aVertexPosition'),
-      },
-      uniformLocations: {
-        resolution: gl.getUniformLocation(shaderProgram, 'uResolution'),
-        mouse: gl.getUniformLocation(shaderProgram, 'uMouse'),
-        time: gl.getUniformLocation(shaderProgram, 'uTime'),
-      },
-    };
+    const vertices = new Float32Array([
+      -1, -1,
+       1, -1,
+      -1,  1,
+      -1,  1,
+       1, -1,
+       1,  1,
+    ]);
+    const buffer = gl.createBuffer();
+    gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+    gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+    const aPosition = gl.getAttribLocation(program, "a_position");
+    gl.enableVertexAttribArray(aPosition);
+    gl.vertexAttribPointer(aPosition, 2, gl.FLOAT, false, 0, 0);
 
-    const positionBuffer = gl.createBuffer();
-    gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-    const positions = [
-      -1.0, -1.0,
-      1.0, -1.0,
-      -1.0, 1.0,
-      1.0, 1.0,
-    ];
-    gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW);
+    const uResolution = gl.getUniformLocation(program, "u_resolution");
+    const uMouse = gl.getUniformLocation(program, "u_mouse");
+    const uTime = gl.getUniformLocation(program, "u_time");
 
-    let mousePos = [canvas.width / 2, canvas.height / 2];
-    canvas.addEventListener('mousemove', (e) => {
+    let mousePos = [0, 0];
+    window.addEventListener("mousemove", (e) => {
       mousePos = [e.clientX, canvas.height - e.clientY];
     });
 
-    let startTime = Date.now();
+    const startTime = Date.now();
     function render() {
-      const currentTime = (Date.now() - startTime) / 1000.0;
-      gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
-      gl.clearColor(0.0, 0.0, 0.0, 1.0);
-      gl.clear(gl.COLOR_BUFFER_BIT);
-      gl.useProgram(programInfo.program);
-
-      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-      gl.enableVertexAttribArray(programInfo.attribLocations.vertexPosition);
-      gl.vertexAttribPointer(programInfo.attribLocations.vertexPosition, 2, gl.FLOAT, false, 0, 0);
-
-      gl.uniform2f(programInfo.uniformLocations.resolution, canvas.width, canvas.height);
-      gl.uniform2f(programInfo.uniformLocations.mouse, mousePos[0], mousePos[1]);
-      gl.uniform1f(programInfo.uniformLocations.time, currentTime);
-
-      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+      const currentTime = (Date.now() - startTime) / 1000;
+      gl.uniform2f(uResolution, canvas.width, canvas.height);
+      gl.uniform2f(uMouse, mousePos[0], mousePos[1]);
+      gl.uniform1f(uTime, currentTime);
+      gl.drawArrays(gl.TRIANGLES, 0, 6);
       requestAnimationFrame(render);
     }
     render();
+
+    window.addEventListener("resize", () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+      gl.viewport(0, 0, canvas.width, canvas.height);
+    });
+    gl.viewport(0, 0, canvas.width, canvas.height);
   </script>
 </body>
-
 </html>
