--- a/webgl/for_fun.html
+++ b/webgl/for_fun.html
@@ -2,114 +2,199 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Interactive Shader Visualization</title>
+  <title>Merged Star Field with Interactive Shader</title>
   <style>
-    html, 
-    body { margin: 0; 
-          height: 100%; 
-          overflow: hidden; 
-        }
-    canvas { 
-      display: block; 
+    html, body {
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+    }
+    canvas {
+        display: block;
     }
   </style>
 </head>
 <body>
-  <canvas id="glCanvas"></canvas>
-  <script>
-    const canvas = document.getElementById('glCanvas');
+<canvas id="glCanvas"></canvas>
+<script>
+    const canvas = document.getElementById("glCanvas");
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
-    const gl = canvas.getContext('webgl');
-    // if (!gl) { 
-    //   alert("Your browser does not support WebGL."); 
-    // }
-
+    const gl = canvas.getContext("webgl");
+    if (!gl) { alert("Your browser does not support WebGL."); }
     const vertexShaderSource = `
-      attribute vec2 a_position;
-      void main() {
-        gl_Position = vec4(a_position, 0.0, 1.0);
-      }
-    `;
-
-    const fragmentShaderSource = `
-      precision mediump float;
-      uniform vec2 u_resolution;
-      uniform vec2 u_mouse;
-      uniform float u_time;
-      void main() {
-        vec2 st = gl_FragCoord.xy / u_resolution;
-        float d = distance(st, (u_mouse / u_resolution) * 0.5);
-        vec3 color = vec3(0.5 + 0.5 * cos(u_time + st.xyx + vec3(0,2,4))) - d;
-        gl_FragColor = vec4(color, 1.0);
-      }
-    `;
-
-    function compileShader(type, source) {
-      const shader = gl.createShader(type);
-      gl.shaderSource(shader, source);
-      gl.compileShader(shader);
-      if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-        console.error(gl.getShaderInfoLog(shader));
+    attribute vec3 a_position;
+    uniform mat4 model2View;
+    uniform mat4 view2clip;
+    void main() {
+      gl_PointSize = 2.0;
+      gl_Position = view2clip * model2View * vec4(a_position, 1.0);
+    }
+  `;
+  const fragmentShaderSource = `
+    precision mediump float;
+    uniform vec2 u_resolution;
+    uniform vec2 u_mouse;
+    uniform float u_time;
+    void main() {
+      vec2 st = gl_FragCoord.xy / u_resolution;
+      float d = distance(st, (u_mouse / u_resolution) * 0.5);
+      vec3 color = vec3(0.5 + 0.5 * cos(u_time + st.xyx + vec3(0,2,4))) - d;
+      gl_FragColor = vec4(color, 1.0);
+    }
+  `;
+    function compileShader(source, type) {
+    const shader = gl.createShader(type);
+    gl.shaderSource(shader, source);
+    gl.compileShader(shader);
+    if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+        console.error("Shader Compile Error:", gl.getShaderInfoLog(shader));
         gl.deleteShader(shader);
         return null;
-      }
-      return shader;
     }
-
-    const vertexShader = compileShader(gl.VERTEX_SHADER, vertexShaderSource);
-    const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fragmentShaderSource);
-
+        return shader;
+    }
+    const vertexShader = compileShader(vertexShaderSource, gl.VERTEX_SHADER);
+    const fragmentShader = compileShader(fragmentShaderSource, gl.FRAGMENT_SHADER);
     const program = gl.createProgram();
     gl.attachShader(program, vertexShader);
     gl.attachShader(program, fragmentShader);
     gl.linkProgram(program);
     if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-      console.error(gl.getProgramInfoLog(program));
+        console.error("Program Link Error:", gl.getProgramInfoLog(program));
     }
     gl.useProgram(program);
-
-    const vertices = new Float32Array([
-      -1, -1,
-       1, -1,
-      -1,  1,
-      -1,  1,
-       1, -1,
-       1,  1,
-    ]);
-    const buffer = gl.createBuffer();
-    gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
-    gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-    const aPosition = gl.getAttribLocation(program, "a_position");
-    gl.enableVertexAttribArray(aPosition);
-    gl.vertexAttribPointer(aPosition, 2, gl.FLOAT, false, 0, 0);
-
+    const NUM_POINTS = 10000;
+  const stars = new Float32Array(NUM_POINTS * 3);
+  for (let i = 0; i < NUM_POINTS * 3; i++) {
+    stars[i] = Math.random() * 8 - 4;
+    }
+    const starBuffer = gl.createBuffer();
+    gl.bindBuffer(gl.ARRAY_BUFFER, starBuffer);
+    gl.bufferData(gl.ARRAY_BUFFER, stars, gl.STATIC_DRAW);
+    const aPositionLocation = gl.getAttribLocation(program, "a_position");
+    gl.enableVertexAttribArray(aPositionLocation);
+    gl.vertexAttribPointer(aPositionLocation, 3, gl.FLOAT, false, 0, 0);
+    const uModel2View = gl.getUniformLocation(program, "model2View");
+    const uView2Clip  = gl.getUniformLocation(program, "view2clip");
     const uResolution = gl.getUniformLocation(program, "u_resolution");
     const uMouse = gl.getUniformLocation(program, "u_mouse");
     const uTime = gl.getUniformLocation(program, "u_time");
-
+    function identityMatrix() {
+    return new Float32Array([
+        1,0,0,0,
+        0,1,0,0,
+        0,0,1,0,
+        0,0,0,1
+    ]);
+    }
+    function multiplyMatrix(a, b) {
+    const out = new Float32Array(16);
+    for (let col = 0; col < 4; col++) {
+        for (let row = 0; row < 4; row++) {
+            out[col*4+row] =
+            a[row+0] * b[col*4+0] +
+            a[row+4] * b[col*4+1] +
+            a[row+8] * b[col*4+2] +
+            a[row+12] * b[col*4+3];
+        }
+    }
+    return out;
+    }
+    function rotateXMatrix(angle) {
+    const c = Math.cos(angle), s = Math.sin(angle);
+    return new Float32Array([
+        1,0,0,0,
+        0,c,s,0,
+        0,-s,c,0,
+        0,0,0,1
+    ]);
+    }
+    function rotateYMatrix(angle) {
+    const c = Math.cos(angle), s = Math.sin(angle);
+    return new Float32Array([
+        c,0,-s,0,
+        0,1,0,0,
+        s,0,c,0,
+        0,0,0,1
+    ]);
+    }
+    function rotateZMatrix(angle) {
+    const c = Math.cos(angle), s = Math.sin(angle);
+    return new Float32Array([
+        c,s,0,0,
+        -s,c,0,0,
+        0,0,1,0,
+        0,0,0,1
+    ]);
+    }
+    function translationMatrix(tx, ty, tz) {
+    return new Float32Array([
+        1,0,0,0,
+        0,1,0,0,
+        0,0,1,0,
+        tx,ty,tz,1
+    ]);
+    }
+    function generatePerspectiveMatrix(fovy, aspect, near, far) {
+    const f = 1.0 / Math.tan(fovy / 2);
+    const nf = 1 / (near - far);
+    const m = new Float32Array(16);
+    m[0] = f / aspect;
+    m[1] = 0;
+    m[2] = 0;
+    m[3] = 0;
+    m[4] = 0;
+    m[5] = f;
+    m[6] = 0;
+    m[7] = 0;
+    m[8] = 0;
+    m[9] = 0;
+    m[10] = (far + near) * nf;
+    m[11] = -1;
+    m[12] = 0;
+    m[13] = 0;
+    m[14] = 2 * far * near * nf;
+    m[15] = 0;
+    return m;
+    }
+    let view2clip = generatePerspectiveMatrix(Math.PI * 0.35, canvas.width / canvas.height, 0.01, 8.0);
+    gl.uniformMatrix4fv(uView2Clip, false, view2clip);
+    gl.uniform2f(uResolution, canvas.width, canvas.height);
     let mousePos = [0, 0];
-    window.addEventListener("mousemove", (e) => {
-      mousePos = [e.clientX, canvas.height - e.clientY];
-    });
-
+    window.addEventListener("mousemove", (e) => { mousePos = [e.clientX, canvas.height - e.clientY]; });
     const startTime = Date.now();
+    let tick = 0;
+    let angle = 0;
+    gl.clearColor(0.0, 0.0, 0.0, 1.0);
     function render() {
-      const currentTime = (Date.now() - startTime) / 1000;
-      gl.uniform2f(uResolution, canvas.width, canvas.height);
-      gl.uniform2f(uMouse, mousePos[0], mousePos[1]);
-      gl.uniform1f(uTime, currentTime);
-      gl.drawArrays(gl.TRIANGLES, 0, 6);
-      requestAnimationFrame(render);
+    tick += 16.6;
+    angle += 0.0005;
+    let mx = (mousePos[0] - canvas.width/2) / (canvas.width/2);
+    let my = (mousePos[1] - canvas.height/2) / (canvas.height/2);
+    let model = identityMatrix();
+    model = multiplyMatrix(model, rotateZMatrix(angle));
+    model = multiplyMatrix(model, rotateYMatrix(angle));
+    model = multiplyMatrix(model, rotateXMatrix(angle));
+    model = multiplyMatrix(model, translationMatrix(mx, my + Math.sin(tick / 50000), 0));
+    gl.uniformMatrix4fv(uModel2View, false, model);
+    const currentTime = (Date.now() - startTime) / 1000;
+    gl.uniform1f(uTime, currentTime);
+    gl.uniform2f(uMouse, mousePos[0], mousePos[1]);
+    gl.clear(gl.COLOR_BUFFER_BIT);
+    gl.drawArrays(gl.POINTS, 0, NUM_POINTS);
+    requestAnimationFrame(render);
     }
     render();
-
     window.addEventListener("resize", () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-      gl.viewport(0, 0, canvas.width, canvas.height);
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    gl.viewport(0, 0, canvas.width, canvas.height);
+    gl.uniform2f(uResolution, canvas.width, canvas.height);
+    view2clip = generatePerspectiveMatrix(Math.PI * 0.35, canvas.width / canvas.height, 0.01, 8.0);
+    gl.uniformMatrix4fv(uView2Clip, false, view2clip);
     });
     gl.viewport(0, 0, canvas.width, canvas.height);
-  </script>
+</script>
 </body>
 </html>
