--- a/webgl/for_fun.html
+++ b/webgl/for_fun.html
@@ -1,151 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Interactive Shader Visualization</title>
+  <title>Interactive Snow Shader</title>
   <style>
-    html, body { margin: 0; height: 100%; overflow: hidden; }
-    canvas { display: block; }
+    html, body {
+        height: 100%;
+        overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
   </style>
 </head>
+
 <body>
-<canvas id="glCanvas"></canvas>
-<script>
-const canvas = document.getElementById("glCanvas");
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-const gl = canvas.getContext("webgl");
-if (!gl) { alert("Your browser does not support WebGL."); }
-const vertexShaderSource = `
-attribute vec3 a_position;
-uniform mat4 model2View;
-uniform mat4 view2clip;
-void main(){
-  gl_PointSize = 2.0;
-  gl_Position = view2clip * model2View * vec4(a_position, 1.0);
-}`;
-const fragmentShaderSource = `
-precision mediump float;
-uniform vec2 uResolution;
-uniform vec2 uMouse;
-uniform float uTime;
-void main(void){
-  vec2 st = gl_FragCoord.xy / uResolution;
-  float d = distance(st, uMouse / uResolution);
-  vec3 color = vec3(0.5 + 0.5 * sin(uTime + d * 10.0),
-                    0.5 + 0.5 * cos(uTime + d * 10.0),
-                    0.5 - 0.5 * sin(uTime));
-  gl_FragColor = vec4(color, 1.0);
-}`;
-function compileShader(source, type){
-  const shader = gl.createShader(type);
-  gl.shaderSource(shader, source);
-  gl.compileShader(shader);
-  if(!gl.getShaderParameter(shader, gl.COMPILE_STATUS)){
-    console.error("Shader Compile Error:", gl.getShaderInfoLog(shader));
-    gl.deleteShader(shader);
-    return null;
-  }
-  return shader;
-}
-const vertexShader = compileShader(vertexShaderSource, gl.VERTEX_SHADER);
-const fragmentShader = compileShader(fragmentShaderSource, gl.FRAGMENT_SHADER);
-const program = gl.createProgram();
-gl.attachShader(program, vertexShader);
-gl.attachShader(program, fragmentShader);
-gl.linkProgram(program);
-if(!gl.getProgramParameter(program, gl.LINK_STATUS)){
-  console.error("Program Link Error:", gl.getProgramInfoLog(program));
-}
-gl.useProgram(program);
-const NUM_POINTS = 10000;
-const stars = new Float32Array(NUM_POINTS * 3);
-for(let i=0;i<NUM_POINTS*3;i++){
-  stars[i] = Math.random()*8 - 4;
-}
-const starBuffer = gl.createBuffer();
-gl.bindBuffer(gl.ARRAY_BUFFER, starBuffer);
-gl.bufferData(gl.ARRAY_BUFFER, stars, gl.STATIC_DRAW);
-const aPositionLocation = gl.getAttribLocation(program, "a_position");
-gl.enableVertexAttribArray(aPositionLocation);
-gl.vertexAttribPointer(aPositionLocation, 3, gl.FLOAT, false, 0, 0);
-const uModel2View = gl.getUniformLocation(program, "model2View");
-const uView2Clip = gl.getUniformLocation(program, "view2clip");
-const uResolution = gl.getUniformLocation(program, "uResolution");
-const uMouse = gl.getUniformLocation(program, "uMouse");
-const uTime = gl.getUniformLocation(program, "uTime");
-function identityMatrix(){
-  return new Float32Array([1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1]);
-}
-function multiplyMatrix(a, b){
-  const out = new Float32Array(16);
-  for(let col=0;col<4;col++){
-    for(let row=0;row<4;row++){
-      out[col*4+row] = a[row+0]*b[col*4+0] + a[row+4]*b[col*4+1] + a[row+8]*b[col*4+2] + a[row+12]*b[col*4+3];
+  <canvas id="glCanvas"></canvas>
+  <script>
+    const canvas = document.getElementById("glCanvas");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    const gl = canvas.getContext("webgl");
+    if (!gl) { alert("WebGL not supported"); }
+
+    const vsSource = `
+    attribute vec3 a_position;
+    void main(){
+      gl_PointSize = 2.0;
+      gl_Position = vec4(a_position, 1.0);
     }
-  }
-  return out;
-}
-function rotateXMatrix(angle){
-  const c = Math.cos(angle), s = Math.sin(angle);
-  return new Float32Array([1,0,0,0,0,c,s,0,0,-s,c,0,0,0,0,1]);
-}
-function rotateYMatrix(angle){
-  const c = Math.cos(angle), s = Math.sin(angle);
-  return new Float32Array([c,0,-s,0,0,1,0,0,s,0,c,0,0,0,0,1]);
-}
-function rotateZMatrix(angle){
-  const c = Math.cos(angle), s = Math.sin(angle);
-  return new Float32Array([c,s,0,0,-s,c,0,0,0,0,1,0,0,0,0,1]);
-}
-function translationMatrix(tx, ty, tz){
-  return new Float32Array([1,0,0,0,0,1,0,0,0,0,1,0,tx,ty,tz,1]);
-}
-function generatePerspectiveMatrix(fovy, aspect, near, far){
-  const f = 1.0/Math.tan(fovy/2);
-  const nf = 1/(near-far);
-  const m = new Float32Array(16);
-  m[0] = f/aspect; m[1]=0; m[2]=0; m[3]=0;
-  m[4]=0; m[5]=f; m[6]=0; m[7]=0;
-  m[8]=0; m[9]=0; m[10]=(far+near)*nf; m[11]=-1;
-  m[12]=0; m[13]=0; m[14]=2*far*near*nf; m[15]=0;
-  return m;
-}
-let view2clip = generatePerspectiveMatrix(Math.PI*0.35, canvas.width/canvas.height, 0.01, 8.0);
-gl.uniformMatrix4fv(uView2Clip, false, view2clip);
-gl.uniform2f(uResolution, canvas.width, canvas.height);
-let mousePos = [canvas.width/2, canvas.height/2];
-canvas.addEventListener("mousemove", e => { mousePos = [e.clientX, canvas.height - e.clientY]; });
-const startTime = Date.now();
-let tick = 0;
-let angle = 0;
-gl.clearColor(0,0,0,1);
-function render(){
-  tick += 16.6;
-  angle += 0.0005;
-  let model = identityMatrix();
-  model = multiplyMatrix(model, rotateZMatrix(angle));
-  model = multiplyMatrix(model, rotateYMatrix(angle));
-  model = multiplyMatrix(model, rotateXMatrix(angle));
-  model = multiplyMatrix(model, translationMatrix(0, Math.sin(tick/50000), 0));
-  gl.uniformMatrix4fv(uModel2View, false, model);
-  const currentTime = (Date.now()-startTime)/1000;
-  gl.uniform1f(uTime, currentTime);
-  gl.uniform2f(uMouse, mousePos[0], mousePos[1]);
-  gl.clear(gl.COLOR_BUFFER_BIT);
-  gl.drawArrays(gl.POINTS, 0, NUM_POINTS);
-  requestAnimationFrame(render);
-}
-render();
-window.addEventListener("resize", () => {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-  gl.viewport(0,0,canvas.width,canvas.height);
-  gl.uniform2f(uResolution, canvas.width, canvas.height);
-  view2clip = generatePerspectiveMatrix(Math.PI*0.35, canvas.width/canvas.height, 0.01, 8.0);
-  gl.uniformMatrix4fv(uView2Clip, false, view2clip);
-});
-gl.viewport(0,0,canvas.width,canvas.height);
-</script>
+    `;
+
+    const fsSource = `
+    precision mediump float;
+    uniform vec2 uResolution;
+    uniform vec2 uMouse;
+    void main(){
+      float d = distance(gl_FragCoord.xy, uMouse);
+      vec3 color = mix(vec3(0.2, 0.6, 1.0), vec3(1.0), smoothstep(0.0, 50.0, d));
+      gl_FragColor = vec4(color, 1.0);
+    }
+    `;
+
+    function compileShader(src, type) {
+      const sh = gl.createShader(type);
+      gl.shaderSource(sh, src);
+      gl.compileShader(sh);
+      if (!gl.getShaderParameter(sh, gl.COMPILE_STATUS)) {
+        console.error(gl.getShaderInfoLog(sh));
+        gl.deleteShader(sh);
+        return null;
+      }
+      return sh;
+    }
+    const vertexShader = compileShader(vsSource, gl.VERTEX_SHADER);
+    const fragmentShader = compileShader(fsSource, gl.FRAGMENT_SHADER);
+    const program = gl.createProgram();
+    gl.attachShader(program, vertexShader);
+    gl.attachShader(program, fragmentShader);
+    gl.linkProgram(program);
+    if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+      console.error(gl.getProgramInfoLog(program));
+    }
+    gl.useProgram(program);
+
+    const uResolution = gl.getUniformLocation(program, "uResolution");
+    const uMouse = gl.getUniformLocation(program, "uMouse");
+    gl.uniform2f(uResolution, canvas.width, canvas.height);
+
+    let mousePos = [canvas.width / 2, canvas.height / 2];
+    let isMouseOver = false;
+    const defaultMouse = [-100, -100];
+    canvas.addEventListener("mouseenter", () => { isMouseOver = true; });
+    canvas.addEventListener("mouseleave", () => { isMouseOver = false; });
+    canvas.addEventListener("mousemove", e => {
+      mousePos = [e.clientX, canvas.height - e.clientY];
+    });
+
+    const NUM_SNOW = 2000;
+    const snowflakes = new Float32Array(NUM_SNOW * 3);
+    for (let i = 0; i < NUM_SNOW; i++) {
+      let idx = i * 3;
+      snowflakes[idx] = Math.random() * 2 - 1;
+      snowflakes[idx + 1] = Math.random() * 2 - 1;
+      snowflakes[idx + 2] = 0;
+    }
+    const buffer = gl.createBuffer();
+    gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+    gl.bufferData(gl.ARRAY_BUFFER, snowflakes, gl.DYNAMIC_DRAW);
+    const aPosition = gl.getAttribLocation(program, "a_position");
+    gl.enableVertexAttribArray(aPosition);
+    gl.vertexAttribPointer(aPosition, 3, gl.FLOAT, false, 0, 0);
+
+    function updateSnow(delta) {
+      for (let i = 0; i < NUM_SNOW; i++) {
+        let idx = i * 3;
+        snowflakes[idx + 1] -= delta * 0.2;
+        if (snowflakes[idx + 1] < -1) {
+          snowflakes[idx + 1] = 1;
+          snowflakes[idx] = Math.random() * 2 - 1;
+        }
+      }
+      gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+      gl.bufferSubData(gl.ARRAY_BUFFER, 0, snowflakes);
+    }
+
+    gl.clearColor(0, 0, 0, 1);
+    let lastTime = performance.now();
+    function render() {
+      let now = performance.now();
+      let delta = (now - lastTime) / 1000;
+      lastTime = now;
+      updateSnow(delta);
+      if (isMouseOver) {
+        gl.uniform2f(uMouse, mousePos[0], mousePos[1]);
+      } else {
+        gl.uniform2f(uMouse, defaultMouse[0], defaultMouse[1]);
+      }
+      gl.clear(gl.COLOR_BUFFER_BIT);
+      gl.drawArrays(gl.POINTS, 0, NUM_SNOW);
+      requestAnimationFrame(render);
+    }
+    render();
+    window.addEventListener("resize", () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+      gl.viewport(0, 0, canvas.width, canvas.height);
+      gl.uniform2f(uResolution, canvas.width, canvas.height);
+    });
+    gl.viewport(0, 0, canvas.width, canvas.height);
+  </script>
 </body>
+
 </html>
