--- a/webgl/for_fun.html
+++ b/webgl/for_fun.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <title>Interactive Snow Shader</title>
   <style>
+    html, body {
+        margin: 0;
+        height: 100%;
+        overflow: hidden;
+    }
     canvas {
       display: block;
     }
