--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
         <div class="logo">
             <!-- alt text can be blank since the logo is purely decorative and putting something like logo isn't actually helpful -->
-            <img src="img/mycout2.png" alt="">
+            <img src="img/mycout.png" alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -83,10 +83,11 @@
             </div>
 
             <div class="service">
-                <h3>Build Automation & Tools</h3>
-                <p> I leverage tools like CMake and GitHub to automate builds and streamline development workflows. This focus on
-                automation allows me to ensure that my code is reliably built and deployed across multiple platforms, improving overall
-                productivity.
+                <h3>Game Engine Developer</h3>
+                <p> I designed and built a custom game engine as part of my academic projects using C++ and OpenGL. This project deepened my
+                understanding of rendering pipelines, shader management, and performance optimization for real-time graphics. I thrive
+                on the challenge of creating immersive, efficient systems and continuously explore new techniques to push the boundaries
+                of interactive experiences.
                 </p>
             </div>
         </div>
