--- a/portfolio/01_hello.html
+++ b/portfolio/01_hello.html
@@ -32,7 +32,7 @@
     <header>
         <div class="logo">
             <!-- alt text can be blank since the logo is purely decorative and putting something like logo isn't actually helpful -->
-            <img src="../img/mycout2.png" alt="">
+            <img src="../img/mycout.png" alt="">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
