--- a/portfolio/02_meshes.html
+++ b/portfolio/02_meshes.html
@@ -66,22 +66,22 @@
             Project <strong>Procedural Geometric Modeling</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">3D Graphics</p>
-        <img src="../img/portfolio_thumbnails/02_meshes.jpg" alt="a picture of this portfolio item" class="intro__img">
+        <img src="../img/portfolio_thumbnails/02_meshes.png" alt="a picture of this portfolio item" class="intro__img">
     </section>
 
     <div class="portfolio-item-individual">
         <h2>Project Overview</h2>
-        <p>Provide a brief description of the project, its purpose, and what you aimed to achieve.</p>
+        <p>The project focuses on procedurally generating a variety of 3D geometric models using OpenGL and GLSL as part of my CS250 Computer Graphics course at DigiPen. The objective was to create dynamic mesh generation routines for shapes such as planes, cubes, spheres, cylinders, cones, and toruses, and to correctly construct their vertex and index buffers for real-time rendering.</p>
 
         <h2>Tasks Completed</h2>
         <ul>
-            <li>Describe the tasks you completed for this project.</li>
-            <li>Be specific about your contributions and the technologies used.</li>
+            <li>Procedural Mesh Generation: Developed algorithms to generate 3D shapes using parametric equations and trigonometric functions, ensuring that the resulting meshes were watertight and correctly indexed.</li>
+            <li>Vertex Layout and Buffer Mapping: Designed custom vertex structures containing position, normal, and UV attributes, and correctly mapped them into OpenGL buffer layouts with attribute descriptors for efficient rendering.</li>
+            <li>Demo Integration: Added the new procedural meshes to the project’s demo system, registering them in the DemosFactory for easy testing and interactive viewing.</li>
         </ul>
 
         <h2>Reflection</h2>
-        <p>Reflect on the project, discussing any challenges faced, solutions implemented, and what you learned from the
-            experience.</p>
+        <p>One of the primary challenges was managing the intricacies of mesh topology and ensuring consistent index buffer generation across different shapes. Debugging issues related to vertex ordering and winding helped me gain a deeper understanding of both the rendering pipeline and efficient buffer management. Overall, this project reinforced the importance of modular design and thorough testing in graphics programming.</p>
     </div>
 
     <div class="portfolio-item-individual">
